2002-12-10  Holger Thon <holger.thon@gnome-db.org>

	Fixes #97669
	* providers/freetds/gda-tds-{schemas.h,types.c}:
	* providers/freetds/gda-freetds-provider.c: fixed types schema,
	get_server_version
	* providers/freetds/gda-freetds-recordset.c: fixed datamodel return
	for queries without result
	* testing/freetds-test.c: activated freetds provider checks again

2002-12-09  Holger Thon <holger.thon@gnome-db.org>

	Merged sybase provider from head

        * providers/sybase/*: first working release of new sybase-provider,
        supporting rowresults and schemas
	* providers/freetds/*: config.h include fix and schema fixes
	* testing/sybase-test{c,h}, testing/client.c, testing/Makefile.am:
	added sybase tests
	* testing/client.c: fixed open_connection to use configured password
        * configure.in: activated sybase provider, fixed libraries

2002-11-12  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #96810

	* providers/oracle/gda-oracle-provider.c (get_oracle_tables): added
	missing commas to SQL command.

2002-11-08  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #97997
	
	* libgda.spec.in: removed obsolete requirements.

2002-11-07  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
 
	* libgda/gda-config.c:
	(parse_config_file): setup libxml2 memory functions. Ignore other
	sections than '/apps/libgda/Datasources' (they are not written again to
	the file). Don't add empty sections.
	(gda_config_remove_key): when removing a key, remove also the section
	if it gets empty.

2002-11-07  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* doc/C/libgda-docs.sgml: fixed tutorial example. Thanks to
	calvaris and others for pointing this out.
	* libgda/gda-row.c: added comment to the documentation of
	gda_row_get_value.

2002-11-07  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-client.c: check that provider is not null before doing the
	lookup.

2002-11-05  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
